renaming article to parenting, a bunch of other changes

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Homepage" />
-        <activity android:name=".Article"/>
+        <activity android:name=".Parenting"/>
     </application>
 
 </manifest>
