--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,11 +19,13 @@
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Homepage" />
-        <activity android:name=".Parenting"/>
+        <activity android:name=".Parenting" />
+        <activity android:name=".BaseArticle"></activity>
     </application>
 
 </manifest>
