--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,11 @@
         <activity android:name=".Homepage" />
         <activity android:name=".Parenting" />
         <activity android:name=".BaseArticle" />
-        <activity android:name=".Article1"></activity>
+        <activity android:name=".Article1" />
+        <activity android:name=".Article2" />
+        <activity android:name=".Article3" />
+        <activity android:name=".Article4" />
+        <activity android:name=".Article5"></activity>
     </application>
 
 </manifest>
